# soulfire

./: .dockerignore  .gcloudignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  commands.json  form.html  index.mjs  index.mts  package.json  parts.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game-request.md
.github/workflows/: devskim.yml  rust.yml
assets/: base.css  base.js
games/: hi3-glb.yml
src/: lib.rs  main.rs
templates/: add-bot.html.hbs  all-games.html.hbs  entry.html.hbs  success.html.hbs
