[package]
name = "soulfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
cookie = "0.18.1"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = { version = "1.3.0", default-features = false, features = ["console_appender", "chrono"] }
reqwest = "0.12.4"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rustrict = "0.7.25"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
serde_yml = "0.0.5"
sha2 = "0.10.8"
thiserror = "1.0.60"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["macros"] }
urlencoding = "2.1.3"

[features]
assets-hosting = []
testing = ["assets-hosting"]
